# notime

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build-and-push.sh  deploy.sh  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  план
.claude/agents/: system-architect-reviewer.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_initial.py  001_add_google_calendar_fields.py  002_add_friendships.py  003_add_scheduled_status.py  004_add_timezone_to_timestamps.py  005_remove_friends.py  006_add_completed_at_merge_statuses.py
backend/app/: auth.py  celery_app.py  db.py  google_calendar.py  main.py  models.py  tasks.py  utils.py
data/certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/aa40a6a3ccbefb767e40d468b01fdd85/: meta.json  (+2 more)
data/certbot/conf/archive/bot.dzen.today/: cert1.pem  fullchain1.pem  privkey1.pem
data/certbot/conf/live/bot.dzen.today/: cert.pem  chain.pem  fullchain.pem  privkey.pem
data/certbot/conf/renewal/: bot.dzen.today.conf
frontend/: Dockerfile  env.d.ts  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: FriendsList.vue  TaskList.vue
frontend/src/router/: index.ts
llm_service/: Dockerfile  main.py  pyproject.toml
llm_service/providers/: __init__.py  base.py  factory.py  gemini_provider.py  groq_provider.py  openai_provider.py
telegram_bot/: Dockerfile  main.py  pyproject.toml
